[gd_scene load_steps=14 format=2]

[ext_resource path="res://Menues/GameOverMenu.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Ubuntu-BI.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Fonts/Ubuntu-RI.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Fonts/Ubuntu-B.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Fonts/Ubuntu-R.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Fonts/cmunsx.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=1]
size = 80
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 80
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 80
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
size = 60
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=5]
size = 50
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=6]
size = 50
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=7]
size = 50
font_data = ExtResource( 6 )

[node name="GameOverMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_top = 30.0
margin_right = 1500.0
margin_bottom = 130.0
custom_fonts/bold_italics_font = SubResource( 1 )
custom_fonts/italics_font = SubResource( 2 )
custom_fonts/bold_font = SubResource( 3 )
custom_fonts/normal_font = SubResource( 4 )
bbcode_enabled = true
bbcode_text = "[center][b][i]Game Over[/i][/b][/center]"
tab_size = 2
text = "Game Over"

[node name="Menu" type="Control" parent="."]
margin_left = 300.0
margin_top = 140.0
margin_right = 514.0
margin_bottom = 479.0
__meta__ = {
"_edit_group_": true
}

[node name="TryAgain" type="MenuButton" parent="Menu"]
margin_right = 111.0
margin_bottom = 104.82
hint_tooltip = "Start a session beginning with the first level"
custom_fonts/font = SubResource( 5 )
text = "Try Again!"

[node name="ExitToMainMenu" type="MenuButton" parent="Menu"]
margin_top = 120.0
margin_right = 152.0
margin_bottom = 194.892
hint_tooltip = "Choose a specific level to play"
custom_fonts/font = SubResource( 6 )
text = "Exit to Main Menu"

[node name="ExitToDesktop" type="MenuButton" parent="Menu"]
margin_top = 240.0
margin_right = 84.2714
margin_bottom = 254.393
hint_tooltip = "Exit this game"
custom_fonts/font = SubResource( 7 )
text = "Exit to Desktop"
